--- a/snowtricks/templates/base.html.twig
+++ b/snowtricks/templates/base.html.twig
@@ -2,14 +2,95 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <script src="https://kit.fontawesome.com/7508d2ae4c.js" crossorigin="anonymous"></script>
+        <script
+                src="https://code.jquery.com/jquery-3.5.1.min.js"
+                integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+                crossorigin="anonymous"></script>
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js" integrity="sha384-1CmrxMRARb6aLqgBO7yyAxTOQE2AKb9GfXnEo760AUcUmFx3ibVJJAzGytlQcNXd" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="/css/snowtricks.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+    <header>
+         <div class="container-fluid" id="home">
+                <div class="row">
+                    <div class="img-header">
+                        <nav class="navbar navbar-expand-sm navbar-dark sticky-top my-nav" >
+                            <!-- Brand -->
+                            <a class="navbar-brand" href="#"><img src="/img/logo.png" alt=""></a>
+
+
+                            <!-- Links -->
+                            <ul class="navbar-nav ml-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Me connecter</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Mes tricks</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Mon profil</a>
+                                </li>
+
+                                <!-- Dropdown -->
+
+                            </ul>
+                        </nav>
+                        <div class="to-tricks">
+                            <a href="#tricks" class="smooth-scroll">
+                                <div class="round">
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="reverse-degrade d-flex justif">
+
+                        </div>
+                    </div>
+                    <div class="degrade">
+
+                    </div>
+                </div>
+            </div>
+    </header>
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+    <script>
+        $(window).scroll(function() {
+            var scroll = $(window).scrollTop();
+
+            if (scroll >= 280) {
+                $(".my-nav").addClass("bg-dark");
+                $(".to-tricks").fadeOut();
+            } else {
+                $(".my-nav").removeClass("bg-dark");
+                $(".to-tricks").fadeIn();
+            }
+            if(scroll >= 1080){
+                $(".to-tricks-top").fadeIn();
+            } else {
+                $(".to-tricks-top").fadeOut();
+            }
+        });
+        $(document).ready(function() {
+            $('.smooth-scroll').on('click', function() { // Au clic sur un élément
+                var page = $(this).attr('href'); // Page cible
+                var speed = 400; // Durée de l'animation (en ms)
+                $('html, body').animate( { scrollTop: $(page).offset().top }, speed ); // Go
+                return false;
+            });
+        });
+    </script>
+        {% block javascripts %}
+
+        {% endblock %}
     </body>
 </html>
