--- a/snowtricks/templates/home/tricks.html.twig
+++ b/snowtricks/templates/home/tricks.html.twig
@@ -1,4 +1,4 @@
-
+{% import "macros/tricks.html.twig" as myTricks %}
 {% for figure in tricks %}
     {% if figure.images is not empty %}
         {% set cover = figure.images[0].url %}
@@ -9,7 +9,7 @@
         <div class="card">
             <a href="{{ path('show_tricks',{'slug':figure.slug}) }}">
 
-                <img class="card-img-top" src="{{ cover }}" alt="Card image cap">
+                {{ myTricks.cover(figure) }}
             </a>
             <div class="card-body ">
                 <h5 class="card-title">{{figure.name}}</h5>
