--- a/snowtricks/templates/base.html.twig
+++ b/snowtricks/templates/base.html.twig
@@ -33,10 +33,14 @@
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Me connecter</a>
+                                    {% if app.user is null  %}
+                                        <a class="nav-link" href="{{ path('account_login') }}">Se connecter</a>
+                                    {% else %}
+                                        <a class="nav-link" href="{{ path('account_logout') }}">Se deconnecter</a>
+                                    {% endif %}
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Mes tricks</a>
+                                    <a class="nav-link" href="{{ path('home') }}">Les tricks</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Mon profil</a>
