--- a/snowtricks/templates/admin/edit_tricks.html.twig
+++ b/snowtricks/templates/admin/edit_tricks.html.twig
@@ -59,7 +59,8 @@
 
                 <div class="row mb-5">
                     <div class="col-12 d-flex justify-content-end">
-                        <input type="submit" class="btn btn-danger mr-3" value="Supprimer"> <input type="submit" class="btn btn-primary" value="Sauvegarder">
+                        <input type="submit" id="delete-figure" data-id="{{ figure.id }}" class="btn btn-danger mr-3" value="Supprimer">
+                        <input type="submit"  class="btn btn-primary" value="Sauvegarder">
                     </div>
 
                 </div>
@@ -75,22 +76,13 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-
                                 <input type="file" class="custom-file-input d-none" id="file">
                                 <div class="upload-file">
                                     <div class="progress mt-2" style="height: 10px">
                                         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0"></div>
                                     </div>
-
                                         <button id="upload" class="btn btn-primary mt-2"><i class="fa fa-upload mr-2"></i><span>Upload</span></button>
-
-
-
                                 </div>
-
-
-
-
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
@@ -122,6 +114,8 @@
         </div>
     </div>
 
+    {% include 'partial/modals.html.twig' %}
+
 
     <!-- Modal -->
 
@@ -150,6 +144,7 @@
 {% block javascripts %}
 
         <script type="text/javascript" src="/js/edit.js"></script>
+    <script type="text/javascript" src="/js/delete.js"></script>
     <script>
         jQuery(function() {
 
