--- a/snowtricks/templates/home/caroussel.html.twig
+++ b/snowtricks/templates/home/caroussel.html.twig
@@ -12,7 +12,7 @@
     <div class="carousel-nav row ">
         <div class="d-flex justify-content-center col-12">
             <div class="carousel-indicator pt-3">
-                {% for i in 0..((figure.medias|length)-1)/4 %}
+                {% for i in 0..(((figure.medias|length)-1)/4)|round(0,'floor') %}
                     <span id="index-{{ loop.index }}" class="indicator  {% if loop.first %}active{% endif %} "> </span>
                 {% endfor %}
             </div>
@@ -45,20 +45,23 @@
 
 
 <!-- Modal -->
-<div class="modal fade p-0" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" style="padding: 17px;padding-left: 17px">
-    <div class="modal-dialog my-0" role="document" >
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel"></h5>
-
-            </div>
-            <div class="modal-body" >
-                <div class="modal-img" style="height: 100%">
+<div class="modal-custom">
+    <div class="modal fade p-0" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" style="padding: 17px;padding-left: 17px">
+        <div class="modal-dialog my-0" role="document" >
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel"></h5>
 
                 </div>
+                <div class="modal-body" >
+                    <div class="modal-img" style="height: 100%">
+
+                    </div>
 
 
+                </div>
             </div>
         </div>
     </div>
 </div>
+
