--- a/snowtricks/templates/home/tricks.html.twig
+++ b/snowtricks/templates/home/tricks.html.twig
@@ -12,7 +12,17 @@
                 {{ myTricks.cover(figure) }}
             </a>
             <div class="card-body ">
-                <h5 class="card-title">{{figure.name}}</h5>
+
+                <div class=" ml-auto p-2 d-flex justify-content-between align-items-center ">
+                    <h5 class="card-title d-block text-left" >{{figure.name}}</h5>
+                    {% if app.user %}
+                        <div class="d-flex flex-nowrap">
+                            <a href="{{ path('admin_edit',{id:figure.id}) }}"><i class="mr-2 fa fa-edit" style="color: #476f9e"></i></a>
+                            <a href="#" data-id="{{ figure.id }}" class="remove-tricks"><i class="fa fa-trash-alt" style="color: #476f9e"></i></a>
+                        </div>
+                    {% endif %}
+
+                </div>
             </div>
         </div>
     </div>
