--- a/snowtricks/public/css/snowtricks.css
+++ b/snowtricks/public/css/snowtricks.css
@@ -118,6 +118,35 @@ a:hover{
     border-left: 4px solid #476f9e;
 
 }
+.alert-success{
+    color: #4d7b4f;
+    padding: 0.75rem;
+    background-color: #62b166;
+    border-bottom: 5px solid #4d7b4f;
+}
+.alert-danger{
+    color: #821315;
+    padding: 0.75rem;
+    background-color: #d24441;
+    border-bottom: 5px solid #821315;
+}
+.alert-notify{
+    color: #384570;
+    padding: 0.75rem;
+    background-color: #476f9e;
+    border-bottom: 5px solid #384570;
+}
+.alert{
+    position: fixed;
+    z-index: 999;
+    top: 81px;
+    width: 100%;
+    border-radius: 0;
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+
+}
 @media only screen and (max-device-width: 768px) {
     .img-header{
         background-image: url("/img/snowtricks_mobile.png");
