--- a/snowtricks/templates/home/caroussel.html.twig
+++ b/snowtricks/templates/home/caroussel.html.twig
@@ -37,7 +37,7 @@
 
         </div>
     </div>
-    <div class="row p-3 " id="loader-image" >
+    <div class="row p-3 " id="loader-image" style="min-height: 138px">
         {{ myTricks.mediasRanged(figure) }}
     </div>
 </div>
