--- a/snowtricks/templates/account/login.html.twig
+++ b/snowtricks/templates/account/login.html.twig
@@ -12,9 +12,9 @@
             <h1 style="color: #476f9e" class=" mb-5">Se connecter !</h1>
             {% if error and not noValidate  %}
 
-                <div class="alert alert-danger">Votre email ou mot de passe est invalide </div>
+                <div class="custom-alert alert-danger">Votre email ou mot de passe est invalide </div>
             {% elseif noValidate  %}
-                <div class="alert alert-danger">Votre Compte n'est pas encore actif veuillez le confirmez depuis l'email de confirmation que vous avez recut</div>
+                <div class="custom-alert alert-notify">Votre Compte n'est pas encore actif veuillez le confirmez depuis l'email de confirmation que vous avez recut</div>
             {% endif %}
             <form action="{{ path('account_login') }}" method="post">
                 <div class="form-group mt-4">
