--- a/snowtricks/templates/base.html.twig
+++ b/snowtricks/templates/base.html.twig
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <script src="https://kit.fontawesome.com/7508d2ae4c.js" crossorigin="anonymous"></script>
         <script
-                src="https://code.jquery.com/jquery-3.4.1.min.js"
-                integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+                src="https://code.jquery.com/jquery-3.5.1.min.js"
+                integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
                 crossorigin="anonymous"></script>
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
@@ -45,9 +45,12 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="{{ path('home') }}">Les tricks</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Mon profil</a>
-                                </li>
+
+                                {% if app.user and app.user.asRole('ROLE_ADMIN') %}
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="{{ path('admin_config') }}">Administration</a>
+                                    </li>
+                                {% endif %}
 
 
                                 <!-- Dropdown -->
@@ -73,12 +76,27 @@
                 </div>
             </div>
     </header>
+    {% block body %}{% endblock %}
 
-        {% block body %}{% endblock %}
+
+
+<div class="container">
+    <footer>
+        <div class="row">
+            <div class="col-6 mt-5 p-2">Copyright © projet openclassroom Snowtricks</div>
+            <div class=" col-3 text-center ">
+                <div class="col-3"></div>
+            </div>
+        </div>
+    </footer>
+</div>
+
     <script type="text/javascript" src="/js/flash.js"></script>
     <script>
         $(".to-tricks-top").hide();
+
         $(window).scroll(function() {
+
             var scroll = $(window).scrollTop();
 
             if (scroll >= 90) {
