--- a/snowtricks/templates/home/show.html.twig
+++ b/snowtricks/templates/home/show.html.twig
@@ -5,13 +5,13 @@
 {% block stylesheets %} <link rel="stylesheet" href="/css/modal.css"> {% endblock %}
 {% block body %}
 <div class="container-fluid">
-    <div class="row center-div" >
+    <div class="row center-div">
         <div class="col-2"></div>
 
         <div class="col-lg-8 col-md-12" style="background-color: white">
             <div class="row">
                 <div class="col-12 text-center p-0">
-                    {% if app.user %}
+                    {% if figure.isAuthor %}
                         <div class="load-more ml-auto p-2  text-center" style="position: absolute;top: 15px;right: 15px">
                             <a href="{{ path('admin_edit',{'id':figure.id}) }}"><i class="mr-2 fa fa-edit fa-2x" style="color: #476f9e"></i></a>
                             <a href="#" id="delete-figure" data-id="{{ figure.id }}" ><i class="fa fa-trash-alt fa-2x" style="color: #476f9e"></i></a>
@@ -46,7 +46,7 @@
                 </div>
             </div>
 
-            <div class="row mt-5">
+            <div class="row mt-5" id="comment-row">
                 <div class="col-2">
                 </div>
                 <div class="col-lg-8 col-md-12">
@@ -82,6 +82,7 @@
     <script type="text/javascript" src="/js/comments.js"></script>
     <script>
     jQuery(function() {
+        //$('footer').parent().appendTo($('#comment-row'));
         $('.to-tricks').remove();
             let loadComm = $("#load-comments");
             let loader = $(".load-more img");
