--- a/snowtricks/templates/macros/tricks.html.twig
+++ b/snowtricks/templates/macros/tricks.html.twig
@@ -11,14 +11,14 @@
 {# medias ordoned #}
 {% macro mediasRanged(figure) %}
     {% for image in figure.images %}
-        <div class="col-lg-3 col-md-6 col-sm-12 px-1 my-carousel-item ">
+        <div class="col-lg-3 col-md-6 col-sm-12 px-1 my-carousel-item " style="height: 100%!important;">
             <a href="{{ image.url }}" class="call-modal" id="{{ image.caption }}">
                 <img class="card-img-top my-1" src="{{ image.url }}" alt="{{ image.caption }}" data-toggle="modal" data-target="#exampleModal">
             </a>
         </div>
     {% endfor %}
     {% for movie in figure.movies %}
-        <div class="col-lg-3 col-md-6 col-sm-12 px-1 my-carousel-item">
+        <div class="col-lg-3 col-md-6 col-sm-12 px-1 my-carousel-item" style="height: 100%">
             <div class="my-1 embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" src="{{ movie.url }}" allowfullscreen></iframe>
             </div>
@@ -32,3 +32,4 @@
         {% include 'home/media-tmpl.html.twig' with {'medias' : medias,'id':loop.index0,'edit':true}%}
     {% endfor %}
 {% endmacro %}
+
