--- a/snowtricks/templates/partial/modals.html.twig
+++ b/snowtricks/templates/partial/modals.html.twig
@@ -12,7 +12,7 @@
                 <p>Veuillez confirmer votre choix au abandonner</p>
             </div>
             <div class="modal-footer">
-                <a href="#" type="button" class="btn btn-danger" id="confirm-delete">Confirmer</a>
+                <a href="#" type="button" class="btn btn-danger confirm-delete" id="confirm-delete">Confirmer</a>
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Annuler</button>
             </div>
         </div>
