--- a/snowtricks/templates/admin/group-edit.html.twig
+++ b/snowtricks/templates/admin/group-edit.html.twig
@@ -52,7 +52,7 @@
                     <p>Veuillez confirmer votre choix</p>
                 </div>
                 <div class="modal-footer">
-                    <a href="#" type="button" class="btn btn-danger" id="confirm-delete">Confirmer</a>
+                    <a href="#" type="button" class="btn btn-danger" data-dismiss="modal" id="confirm-delete">Confirmer</a>
                     <button type="button" class="btn btn-primary" data-dismiss="modal">Annuler</button>
                 </div>
             </div>
