--- a/snowtricks/templates/account/login.html.twig
+++ b/snowtricks/templates/account/login.html.twig
@@ -23,7 +23,7 @@
                 </div>
                 <div class="form-group">
                     <label for="password">Mot de passe</label>
-                    <input name="_password" id="password" type="text" class="form-control">
+                    <input name="_password" id="password" type="password" class="form-control">
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary">Se connecter</button>
