--- a/snowtricks/templates/home/show.html.twig
+++ b/snowtricks/templates/home/show.html.twig
@@ -11,9 +11,9 @@
         <div class="col-lg-8 col-md-12" style="background-color: white">
             <div class="row">
                 <div class="col-12 text-center p-0">
-                    {% if figure.isAuthor %}
+                    {% if figure.isEditable %}
                         <div class="load-more ml-auto p-2  text-center" style="position: absolute;top: 15px;right: 15px">
-                            <a href="{{ path('admin_edit',{'id':figure.id}) }}"><i class="mr-2 fa fa-edit fa-2x" style="color: #476f9e"></i></a>
+                            <a href="{{ path('admin_edit',{'slug':figure.slug}) }}"><i class="mr-2 fa fa-edit fa-2x" style="color: #476f9e"></i></a>
                             <a href="#" id="delete-figure" data-id="{{ figure.id }}" ><i class="fa fa-trash-alt fa-2x" style="color: #476f9e"></i></a>
                         </div>
                     {% endif %}
