--- a/snowtricks/templates/home/show.html.twig
+++ b/snowtricks/templates/home/show.html.twig
@@ -26,7 +26,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="descr-tricks p-3 pl-5">
-                        {{ figure.description }}
+                        {{ figure.description|nl2br }}
                     </div>
                 </div>
             </div>
