--- a/snowtricks/templates/partial/navbars.html.twig
+++ b/snowtricks/templates/partial/navbars.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm navbar-dark fixed-top my-nav" id="nav-screen-lg">
 
-        <a class="navbar-brand" href="#"><img src="/img/logo.png" alt=""></a>
+        <a class="navbar-brand" href="{{path('home')}}"><img src="/img/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -9,7 +9,7 @@
             <ul class="navbar-nav ml-auto">
 
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('home') }}">Les tricks</a>
+                    <a class="nav-link" href="{{ path('home') }}#tricks">Les tricks</a>
                 </li>
 
                 {% if app.user and app.user.asRole('ROLE_ADMIN') %}
